--- a/src/CSS/Button.css
+++ b/src/CSS/Button.css
@@ -6,12 +6,12 @@
     margin: 0 30px 80px 0;
     border: solid 2px var(--gray600);
     width: 250px;
-    height: 300px;
+    height: 350px;
 }
 
 .kakao-share-button-wrapper > img {
     width: 100%;
-    height: 100%;
+    height: 250px;
 }
 
 .kakao-share-button-title {
@@ -46,7 +46,9 @@
     .kakao-share-button-wrapper {
         display: flex;
         flex-direction: column;
+        margin-left: 30px;
+        margin-top: 20px;
         width: 100%;
-        height: 300px;
+        height: 350px;
     }
 }
